--- a/style.css
+++ b/style.css
@@ -1,78 +1,87 @@
-@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
-* {
+*{
     margin: 0;
     padding: 0;
 }
 
-body {
-    height: 80vh;
+body{
     box-sizing: border-box;
-    background-color: black;
+    background-color: #000000;
     color: #F6F6F6;
 }
 
-.titulo-destaque {
+.titulo-destaque{
     color: #22D4FD;
 }
 
-.apresentacao {
-    margin: 10% 15%;
+.apresentacao{
+    /* margin: 10% 15%; */
+    padding: 8% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-
-.apresentacao__conteudo {
+.apresentacao__conteudo{
     width: 615px;
-    height: 482px;
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
 
-.apresentacao__conteudo__titulo {
+.apresentacao__conteudo__titulo{
+    font-size: 36px;
+    font-family: 'Krona One', sans-serif;
+}
+
+.apresentacao__conteudo__texto{
+    font-size: 24px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.apresentacao__links{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 32px;
+}
+.apresentacao__links__subtitulo{
     font-family: 'Krona One', sans-serif;
     font-weight: 400;
-    font-style: normal;
-    font-size: 36px;
-}
-
-.apresentacao__conteudo__texto {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    font-style: normal;
     font-size: 24px;
 }
-
-.apresentacao__conteudo__texto_lista {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 24px;
-    list-style-type: square;
-    padding-left: 10%;
-}
-
-.apresentacao__links {
+.apresentacao__links__link{
+    /* background-color: #22D4FD; */
     display: flex;
-    justify-content: space-between;
-}
-
-.apresentacao__links__link {
-    background-color: #22D4FD;
-    width: 280px;
+    justify-content: center;
+    gap: 16px;
+    border: 2px solid #22D4FD;
+    width: 378px;
     text-align: center;
-    border-radius: 16px;
+    border-radius: 8px;
+    font-size: 24px;
+    font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #000000;
+    color: #F6F6F6;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
-    font-size: 24px;
+}
+.apresentacao__links__link:hover{
+    background-color: #272727;
 }
 
-.apresentacao img {
+.imagen-desenvolvedor {
     width: 35%;
     height: auto;
+}
+
+.rodape{
+    padding: 24px 0;
+    color: #000000;
+    background-color: #22D4FD;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    font-weight: 400;
 }
