--- a/style.css
+++ b/style.css
@@ -11,13 +11,25 @@ body{
     color: #F6F6F6;
 }
 
-.titulo-destaque{
+.cabecalho{
+    padding: 2% 0% 0% 15%;
+}
+
+.cabecalho__menu{
+    display: flex;
+    gap: 80px;
+}
+
+.cabecalho__menu__link {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    font-weight: 600;
     color: #22D4FD;
+    text-decoration: none;
 }
 
 .apresentacao{
-    /* margin: 10% 15%; */
-    padding: 8% 15%;
+    padding: 3% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -32,6 +44,10 @@ body{
 .apresentacao__conteudo__titulo{
     font-size: 36px;
     font-family: 'Krona One', sans-serif;
+}
+
+.titulo-destaque{
+    color: #22D4FD;
 }
 
 .apresentacao__conteudo__texto{
