--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,7 @@ body {
 
 .cabecalho__menu__link {
     font-family: var(--fonte-texto);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     color: var(--cor-terciaria);
     text-decoration: none;
@@ -60,12 +60,12 @@ body {
 }
 
 .apresentacao__conteudo__titulo {
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: var(--fonte-titulo);
 }
 
 .apresentacao__conteudo__subtitulo {
-    font-size: 28px;
+    font-size: 1.75rem;
     font-family: var(--fonte-titulo);
 }
 
@@ -74,7 +74,7 @@ body {
 }
 
 .apresentacao__conteudo__texto {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--fonte-texto);
 }
 
@@ -89,7 +89,7 @@ body {
 .apresentacao__links__subtitulo {
     font-family: var(--fonte-titulo);
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 .apresentacao__links__link {
@@ -100,7 +100,7 @@ body {
     width: 378px;
     text-align: center;
     border-radius: 8px;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
@@ -123,6 +123,6 @@ body {
     background-color: var(--cor-terciaria);
     text-align: center;
     font-family: var(--fonte-texto);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
 }
